   * Multiplayer content [era], [modifications] now carry version info of their
     associated add-on, and may have "addon_min_version" fields set which
     specify backwards compatibility with earlier versions.
   * Missing content for games hosted in the mp server may now be retrieved
     automatically by clicking on these games in the mp lobby.
 * Music:
   * Change main menu track to Journey's End.
 * Replays:
   * Added a button that allows playing a single move in replay mode.
 * Sound:
   * Fixed issues with slowed and poisoned sounds not always playing correctly.
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks
   * New chill tempest animation for Lich/Ancient Lich
   * Add 'elemental' trait to Mudcrawler line
   * Fix sound timings for drake fire animation macros
   * Assigned capitalized translatable names to Walking Corpse and Soulless
     variations (bug #22902).
   * Hid alternate Great Wolf variation from help as it is identical to the
     default variation stats-wise.
 * User interface:
   * Added a context menu option for command mode.
   * Added a Classic theme which restores the 1.10 UI.
   * Made orb and minimap colors configurable in Preferences.
   * Remove 'allow_new_game=no' entries from random map new game list
   * Fixed bug #22095: An assertion failure in the gamestate inspector.
   * Changed: A listbox can now update its size when rows are added.
   * Changed: Avoid listboxes to handle mouse clicks twice.
   * Fixed bug #22144 + #22046: An assertion failure with empty labels in
     a listbox.
   * The :inspect dialog now uses the same function as saved games to generate
     WML in text form instead of a simplified version.
   * Added a button to copy the currently displayed content from the :inspect
     dialog to clipboard.