@@ -425,6 +425,7 @@ wesnoth_sources = Split("""
     gui/dialogs/mp_create_game.cpp
     gui/dialogs/mp_create_game_set_password.cpp
     gui/dialogs/mp_host_game_prompt.cpp
+    gui/dialogs/mp_join_game_password_prompt.cpp
     gui/dialogs/mp_login.cpp
     gui/dialogs/mp_method_selection.cpp
     gui/dialogs/network_transmission.cpp
