@@ -187,6 +187,8 @@ Version 1.13.0-dev:
      specify backwards compatibility with earlier versions.
    * Missing content for games hosted in the mp server may now be retrieved
      automatically by clicking on these games in the mp lobby.
+   * Ported the password prompt displayed when joining a password-protected MP
+     game to GUI2 (bug #23455).
  * Music:
    * Change main menu track to Journey's End.
  * Replays:
